add handlers for desires
